<resources>
    <string name="app_name">LocalDataBase</string>
    <string name="loginTitle">LOGIN</string>
    <string name="loginEmail">Email</string>
    <string name="register">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="already_a_member_login">Already a Member? Login</string>
    <string name="confirm_password">Confirm Password</string>
</resources>